change deploy script to manual deploy, since it's now using the github integration

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "deploy": "fly launch",
+    "manual_deploy": "fly launch",
     "_once_allocate_v4": "fly ips allocate-v4",
     "__management__": "inspect remote deployment for this service",
     "printenv": "fly ssh console -C \"printenv\"",
